--- a/src/styles/-public.scss
+++ b/src/styles/-public.scss
@@ -177,271 +177,9 @@
 .relative{
     position: relative;
 }
-
-/** 移动端搜索条件过滤行样式 **/
-.filter-panel{                
-    display: flex;
-    flex-direction: row;
-    background: #fff!important;
-    padding: 6px 0 6px 10px;
-    &:before{display: none;}
-    .search-panel{
-        flex:1;
-        padding-right: 10px;
-        &:before{display: none;}
-        .article-search{
-            font-size: 12px;
-            background-color: #fff;
-            border-radius: 16px;
-            border:1px solid #DCDFE6;
-            .el-input__inner{                            
-                height: 30px;
-                line-height: 30px;
-                padding: 0 10px;
-                font-size: 14px;
-                background: transparent;
-                color:#ddd;
-                border:none;
-            }
-            .el-input-group__append{                    
-                padding: 0 10px;
-                background-color: transparent;
-                border:none;
-                width: 40px;
-                text-align: center;
-                .el-button{        
-                    font-size: 0;
-                    line-height: 0;
-                    padding: 0;
-                    vertical-align: top;
-                    margin:0;
-                    border:none;
-                    >span{
-                        display: block;
-                        font-size: 0;
-                        line-height: 0;
-                    }
-                    .search-icon{    
-                        display: block;                        
-                        height: 30px;
-                        line-height: 30px;
-                        font-size: 20px;
-                        color: #cccccc;
-                        .svg-icon{
-                            vertical-align: top;
-                            margin-top: 5px;
-                        }
-                    }
-                }
-            }
-        }
-        .search-info{
-            display: block;
-            height: 30px;
-            overflow: hidden;
-            font-size: 12px;
-            line-height: 30px;
-            color: 444;
-            span{
-                color: $red;
-            }
-        }
-    }
-    .filter-button{
-      color: #1f2d3d;
-      font-size: 13px;
-      line-height: 22px;
-      display: inline-block;
-      background: #fff;
-      padding: 5px 10px 5px 0;
-      cursor: pointer;
-      .svg-i{
-          margin-left: 5px;
-      }
-    }
-}
-/** 移动端筛选公共样式 **/
-.mobile-filter-mask{
-  position: fixed;
-  right:0px;
-  top:0px;
-  bottom:0px;
-  width:100%;
-  opacity:0;
-  background:rgba(0,0,0,0.6)!important;
-  transition:all 0.2s linear;
-  z-index:11;
-  visibility: hidden;
-  &.open{
-      opacity:1;
-      visibility:inherit;
+@media (max-width:1024px) {
+  html, body, #app, #app > .el-container{
+    width: 1000px;
+    overflow-x: initial;
   }
-}
-/** 移动端筛选公共样式 **/
-.mobile-filter-dialog{
-   position:fixed;
-   right:-300px;
-   bottom:0px;
-   top:0px;
-   width:300px;
-   opacity:0;
-   transition:right 0.3s ease 0.2s;
-   z-index:12;
-   overflow:hidden;
-   box-shadow:0 0 10px rgba(0,0,0,0.12);
-   border-top-left-radius: 10px;
-   border-bottom-left-radius: 10px;
-   .flex-content{
-       position: relative;
-       .abs-scroll{
-           position:absolute;
-           z-index: 3;
-           width: 100%;
-           height: 100%;
-           overflow-y:auto;
-           background:#ffffff;
-       }
-   }
-   ul{
-       background:#f2f2f2;
-       li{
-           padding:15px 15px;
-           background-color: #fff;
-           border-bottom-left-radius: 10px;
-           border-bottom-right-radius: 10px;
-           border-top-left-radius: 10px;
-           border-top-right-radius: 10px;
-           &:first-child{
-               border-top-right-radius: 0;
-           }
-           &:last-child{
-               border-bottom-right-radius: 0;
-               border-bottom-left-radius: 0;
-           }
-           .title-panel{
-               display:block;
-               font-size:14px;
-               font-weight:bold;
-               line-height:24px;
-               margin-bottom: 5px;
-           }
-           .tag-panel{
-               display:block;
-               text-align:left;
-               margin: 0 -5px;
-               .item-button{
-                   width: 33.33333%;
-                   padding: 5px;
-                   float:left;
-                   overflow: hidden;
-                   .el-button,span.el-tag{
-                       display: block;
-                       width:100%;
-                       background:$subMenuActiveText;
-                       border-color:$subMenuActiveText;
-                       color:$menuHover;
-                       text-align:center;
-                       padding:5px;
-                       border-radius:15px;
-                       line-height:20px;
-                       height: auto;
-                       font-size:12px;
-                       &.is-plain{
-                           color:$menuActiveText;
-                           background:$lightPrimaryBg;
-                           border-color:$lightPrimaryBorder;
-                       }
-                   }
-               }
-           }
-           &.column-2{
-               .tag-panel{
-                   .item-button{
-                       width: 50%;
-                   }
-               }
-           }
-           .item-li{
-               margin-bottom:10px;
-               .item-En{
-                   float: left;
-                   width:48%;
-                   margin-left: 4%;
-                   &:first-child{
-                       margin-left: 0px;
-                   }
-               }
-           }
-           .item-filter{
-               width: 100%;
-               line-height:0;
-               font-size:0;
-               .el-select,.el-input,.el-date-picker{
-                   display: block;
-                   width: 100%;
-               }
-           }
-       }
-       li+li{
-           margin-top: 10px;
-       }
-   }
-   .footer-button{
-       text-align:center;
-       border-top: 1px solid #f4f4f4;
-       background-color: #fff;
-       padding: 10px;
-       .btn-yes{
-           display:block;
-           width:60%;
-           margin:0 auto;
-           color:#fff;
-           background:#2e84f6;
-           text-align:center;
-           padding:5px 5px;
-           border-radius:30px;
-           line-height:24px;
-           font-size:12px;
-       }
-   }
-   &.open{
-       opacity:1;
-       right:0;
-   }
-}
-.chart-font{
-    position: relative;
-    left: -40px;
-    top: -20px;
-    .txt-font{
-        padding: 6px 10px;
-        color: #fff;
-        font-size: 12px;
-        font-weight: bold;
-    }
-    i{
-        display: block;
-        border-right: 12px dashed transparent;
-        border-left:none;
-        border-bottom:none;
-        position: absolute;
-        left: 0;
-        bottom: -12px;
-    }
-    &.avg{
-        .txt-font{
-            background-color: #f16b6b;
-        }
-        i{
-            border-top: 12px solid #f16b6b;
-        }
-    }
-    &.target{
-        .txt-font{
-            background-color: #6aa343;
-        }
-        i{
-            border-top: 12px solid #6aa343;
-        }
-    }
 }
