--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -219,56 +219,6 @@
     }
   }
 }
-.mobile{
-  .ChinaphoneTwo{
-    .group-body{
-      .team-panel{
-        .team-header{
-          .require{
-            width:42px;
-          }
-          .all-select{
-            line-height: 12px;
-            padding: 0px!important;
-            border: 0px;
-            height: 12px;
-            margin:4px 8px 0px 0px !important;
-            display: block;
-            &.el-checkbox{
-              .el-checkbox__label{
-                  line-height:20px!important;
-                  font-size:14px!important;
-                  color:#1a1a1a;
-              }
-              &.is-bordered{
-                border:0px solid #DCDFE6;
-                &.el-checkbox--mini{
-                  height:28px;
-                  margin: 0px !important;
-                }
-              }
-            }
-          }
-          .team-headerItem{
-              float:none;
-              clear: both;
-              width: 100%;
-              display: flex;
-              flex-direction: row;
-              .el-date-editor{flex: 1;
-              
-              }
-              .el-input{flex: 1;}
-              &+.team-headerItem{
-                padding-top:8px;
-              }
-          }
-        }
-      }
-    }
-  }
-}
-
 .ChinaphoneNum{
   clear: both;
   display: block;
@@ -309,11 +259,12 @@
     }
   }
   .ChinaphoneNumItem{
-    margin: 0 -35px;
     .item-number{
       float: left;
-      width:25%;
-      padding: 25px 35px;
+      width:20.5%;
+      margin-left:6%;
+      padding: 25px 0px;
+      &:first-child{margin-left:0;}
       &.flat{
         dl{
           dt{
@@ -441,106 +392,39 @@
   }
 }
 
-@media (max-width:1280px){
+@media (max-width:1400px){
   .ChinaphoneNum{
-    .card-header{
-      h2{
-        float:none;
-        clear: both;
-        font-size:20px;
-      }
-      .ChinaphoneNumTag{
-        float:none;
-        clear: both;
-        padding-top:15px;
-      }
-    } 
     .ChinaphoneNumItem{
       clear: both;
       padding-top:10px;
       overflow: hidden;
-      dl{
-        dt{
-          font-size: 14px;
-        }
-        dd{
-          font-size:35px;
-        }
-      }
-    }   
-  }
-  .ChinaphoneMap{
-    .card-header{
-      h2{
-        float:none;
-        clear: both;
-        font-size:20px;
-      }
-      .ChinaphoneMapDate{
-        clear: both;
-        float:none;
-        padding-top:10px;
-        overflow: hidden;
-      }
-    } 
-  }
-}
-@media (max-width:992px){
-  .ChinaphoneNum{
-    padding: 20px 17px;
-    .ChinaphoneNumItem{
-      dl{
-        padding: 20px 15px;
-      }
-    }   
-  }  
-  .ChinaphoneMap{
-    padding: 20px 17px;
-    .card-header{
-      .ChinaphoneMapDate{
-        float:none;
-        clear: both;
-      }
-    } 
-  }
-}
-@media (max-width:750px){
-  .ChinaphoneNum{
-    .card-header{
-      h2{
-        font-size:18px;
-      }
-      .ChinaphoneNumTag{
-        .item-clues{
-          margin-right:10px;
-          margin-bottom:10px;
-        }
-      }
-    } 
-    .ChinaphoneNumItem{
-      dl{
-        dt{padding-bottom: 10px;}
-        dd{
-          font-size:30px;
+      .item-number{
+        width:22%;
+        margin-left:4%;
+        dl{
+          dt{
+            font-size: 14px;
+          }
+          dd{
+            font-size:35px;
+          }
         }
       }
     }   
   }
-  .ChinaphoneMap{
-    .card-header{
-      h2{
-        font-size:18px;
-      }
-    } 
-  }
 }
-@media (max-width:450px){
+@media (max-width:1024px){
   .ChinaphoneNum{
     .ChinaphoneNumItem{
-      dl{
-        padding: 15px 10px;
-        dd{
-          font-size:20px;
+      clear: both;
+      padding-top:10px;
+      overflow: hidden;
+      .item-number{
+        dl{
+          padding: 10px 10px 30px 10px;
+          dd{
+            font-size:30px;
+          }
         }
       }
     }   
