用户体验优化

--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -391,7 +391,11 @@
     }
   }
 }
-
+.cnClues.table-input{
+  .el-textarea .el-textarea__inner{
+    height: 116px;
+  }
+}
 @media (max-width:1400px){
   .ChinaphoneNum{
     .ChinaphoneNumItem{
