--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -688,13 +688,10 @@
                     border-radius:4px;
                     font-size:14px;
                     color:#fff;
-                    background:-moz-linear-gradient(135deg, #5ca8fe 0%, #0480ff 100%);
-                    background:-webkit-linear-gradient(135deg, #5ca8fe 0%, #0480ff 100%);
-                    background:-o-linear-gradient(135deg, #5ca8fe 0%, #0480ff 100%);
-                    background:-ms-linear-gradient(135deg, #5ca8fe 0%, #0480ff 100%);
-                    background:linear-gradient(135deg, #5ca8fe 0%, #0480ff 100%);
+                    background:#2e88ff;
+                    border:1px solid #2e88ff;
                     line-height:24px;
-                    padding:3px 10px;
+                    padding:1px 10px;
                     .svg-i{
                         margin-right:5px;
                         width: 16px;
@@ -706,15 +703,15 @@
                         background: $pink;
                     }
                     &.logEdit{
-                        background:-moz-linear-gradient(135deg, #fdb21b 0%, #f9a500 100%);
-                        background:-webkit-linear-gradient(135deg, #fdb21b 0%, #f9a500 100%);
-                        background:-o-linear-gradient(135deg, #fdb21b 0%, #f9a500 100%);
-                        background:-ms-linear-gradient(135deg, #fdb21b 0%, #f9a500 100%);
-                        background:linear-gradient(135deg, #fdb21b 0%, #f9a500 100%);
+                        color:#2e88ff;
+                        background:#eaf4fe;
+                        border:1px solid #2e88ff;
                         cursor: pointer;
                         transition: all 0.5s;
                         &:hover{
-                            opacity: 0.6;
+                            color: #f9a500;
+                            background: #fff9ec;
+                            border: 1px solid #f9a500;
                         }
                     }
                 }
