--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -822,16 +822,16 @@
     font-size:14px;
     color:#555;
     font-weight:normal;
-    border-bottom:1px solid #e2e9ed;
-    border-right:1px solid #dae4e9;
+    border-bottom:1px solid #ebeff1;
+    border-right:1px solid #ebeff1;
     line-height:20px;
   }
   th.gutter{
     background:#e2e9ed;
   }
   td{
-    border-bottom:1px solid #f7f9fa !important;
-    border-right:1px solid #f7f9fa !important;
+    border-bottom:1px solid #ebeff1 !important;
+    border-right:1px solid #ebeff1 !important;
     font-size:13px !important;
     color:#1a1a1a;
   }
