--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -19,14 +19,10 @@
         &.stat-row{
             .btn-panel{
                 margin-top:-20px;
-                .el-radio-group{
-                    .el-radio-button--small{
-                        .el-radio-button__inner{
-                            padding-top:20px;
-                            padding-bottom: 0px;
-                            border-radius:0 0 8px 8px;
-                        }
-                    } 
+                .btn-span{
+                    padding-top:20px;
+                    padding-bottom: 0px;
+                    border-radius:0 0 8px 8px;
                 }
                 &+.flex-box{
                     h3{
@@ -304,23 +300,21 @@
         .btn-panel{
             text-align: left;
             padding-bottom:20px;
-            .el-radio-group{
-                .el-radio-button--small{
-                    margin-right:20px;
-                    .el-radio-button__inner{
-                        padding:3px 26px 3px 26px;
-                        font-size: 13px;
-                        border:0;
-                        border-radius:8px 8px 8px 8px;
-                        line-height:30px;
-                        color:#fff;
-                        background: #aed1ff;
-                    }
-                    .el-radio-button__orig-radio:checked + .el-radio-button__inner{                            
-                        background-color: #2e88ff;
-                        box-shadow:0px 8px 10px rgba(6,100,224,0.4) !important;
-                    }
-                } 
+            .btn-span{
+                padding:3px 26px 3px 26px;
+                font-size: 13px;
+                border:0;
+                border-radius:8px 8px 8px 8px;
+                line-height:30px;
+                color:#fff;
+                background: #aed1ff;
+                margin-right:20px;
+                display: inline-block;
+                cursor: pointer;
+                &.active{
+                    background-color: #2e88ff;
+                    box-shadow:0px 8px 10px rgba(6,100,224,0.4) !important;
+                }
             }
         }
         .custorm-tooltip{
