--- a/src/styles/-userIndex.scss
+++ b/src/styles/-userIndex.scss
@@ -14,4 +14,13 @@
             width: 150px;
         }
     }
+    .userType{
+        padding-bottom:15px;
+        .el-form-item__label{
+            line-height:35px;
+        }
+        .el-radio{
+            line-height:35px;
+        }
+    }
 }
