--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -634,6 +634,7 @@
     }
     .el-checkbox__label{
       padding-left:0px;
+      font-size: 12px;
     }
     &.is-checked{
       border-color:#bfdbff;
