--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -717,6 +717,7 @@
     border-top:1px solid #c3c0c0!important;
     border-left:1px solid #c3c0c0!important;
     background:#f2f2f2!important;
+    width: 100%;
     &.is-center{
       tr{
         td,th{
