修改双击事件

--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -567,6 +567,11 @@
             &:hover{
               opacity: 0.6;
             }
+            &.isDisabled,&.isDisabled:hover{
+                background-color: #8cbcf9 !important;
+                border-color: #8cbcf9 !important;
+                cursor:no-drop;
+            }
           }
         }
       }
