--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -31,76 +31,6 @@
             margin: 3px 0;
         }
     }
-    //&.mobile{
-    //    position:relative;
-    //    z-index:100;
-    //    .txt-font.border-cell{
-    //        width:100%!important;
-    //        padding:0px!important;
-    //        span{
-    //            border:0px;
-    //            border-left:1px solid #dcdfe6;
-    //            width:100%;
-    //            border-radius:0px;
-    //            padding-top:5px;
-    //            padding-bottom:5px;
-    //            height:42px;
-    //        }
-    //    }      
-    //    .border-row{
-    //        float:left;
-    //        width:25%;
-    //        cursor: pointer;
-    //        .flex-content{
-    //            display:none;
-    //        }
-    //        &:first-child{
-    //            .txt-font.border-cell{
-    //                span{border-left:0px;}
-    //            }
-    //        }
-    //        &.active{
-    //            .txt-font.border-cell{
-    //                color:#fff;
-    //                span{
-    //                    border:0px;
-    //                    width:100%;
-    //                    background:#136add!important;
-    //                    color:#fff;
-    //                }
-    //            } 
-    //            .flex-content{
-    //                display:block;
-    //                position:absolute;
-    //                top:42px;
-    //                background:#136add;
-    //                padding:10px 15px 15px 15px;
-    //                left:0px;
-    //                right:0px;
-    //                .tag-panel{
-    //                    .el-button{
-    //                        margin-top:5px!important;
-    //                        margin-left:0px!important;
-    //                        margin-right:5px!important;
-    //                    }
-    //                }
-    //                .el-button--primary.is-plain{
-    //                    color:#4c4c4c;
-    //                    background:#fff;
-    //                    &:active {
-    //                        border-color:#fff!important;
-    //                        color:#FFFFFF!important;
-    //                        background:#136add!important;
-    //                    }                        
-    //                    &.is-active{
-    //                        border:1px solid #fff!important;
-    //                        background:#136add!important;
-    //                    }
-    //                }
-    //            }  
-    //        }
-    //    }
-    //}
 }
 .ArticleTwo{
     background:#fff;
@@ -545,6 +475,13 @@
                         transition: all .3s;
                         &:hover{
                             box-shadow:0px 1px 2px rgba(247,142,66,0.75);
+                        }
+                        &.isDisabled{
+                            opacity: 0.6;
+                            cursor: no-drop;
+                            &:hover{
+                                box-shadow:0px 5px 10px rgba(247,142,66,0.75);
+                            }
                         }
                     }
                 }
