--- a/src/styles/-element-ui.scss
+++ b/src/styles/-element-ui.scss
@@ -1,4 +1,10 @@
 ﻿// cover some element-ui styles
+.el-table__empty-block{
+  min-height: 40px!important;
+}
+.el-table__empty-text{
+  line-height:40px!important;
+}
 .el-menu{
   background-color: transparent!important;
   border-right: none!important;
