--- a/src/styles/-layout.scss
+++ b/src/styles/-layout.scss
@@ -19,16 +19,6 @@
             height: 100%;
             padding: 0 20px;
             position: relative;
-            &:before{
-                content:'';
-                display: block;
-                position: absolute;
-                left:0;
-                top: 0;
-                bottom: 0;
-                width: 1px;
-                background: linear-gradient(#1d212a 15%,#feffff 50%,#1d212a 85%);
-            }
             .notice-button{
                 margin-right: 20px;
                 position: relative;
@@ -58,6 +48,18 @@
                 width: 32px;
                 height: 32px;
                 font-size: 32px;
+                text-align: center;
+                line-height: 32px;
+                vertical-align: middle;
+                color: #d8d8d8;
+                margin-right: 16px;
+                cursor: pointer;
+            }
+            .cache-icon{
+                display: inline-block;
+                width: 32px;
+                height: 32px;
+                font-size: 24px;
                 text-align: center;
                 line-height: 32px;
                 vertical-align: middle;
@@ -96,6 +98,17 @@
                 float:left;
                 line-height:0;
                 font-size:0;
+                position: relative;
+                &:after{
+                    content:'';
+                    display: block;
+                    position: absolute;
+                    left: -20px;
+                    top: -14px;
+                    bottom: -14px;
+                    width: 1px;
+                    background: linear-gradient(#1d212a 15%,#feffff 50%,#1d212a 85%);
+                }
                 .article-search{
                     width: 100%;
                     .el-input__inner{
@@ -147,6 +160,17 @@
                 line-height:0;
                 font-size:0;
                 text-align: right;
+                position: relative;
+                &:before{
+                    content:'';
+                    display: block;
+                    position: absolute;
+                    right: -20px;
+                    top: -14px;
+                    bottom: -14px;
+                    width: 1px;
+                    background: linear-gradient(#1d212a 15%,#feffff 50%,#1d212a 85%);
+                }
                 .item-button{
                     display: inline-block;
                     height: 32px;
@@ -186,16 +210,6 @@
             position: relative;
             height: 100%;
             z-index: 1;
-            &:after{
-                content:'';
-                display: block;
-                position: absolute;
-                right:0;
-                top: 0;
-                bottom: 0;
-                width: 1px;
-                background: linear-gradient(#1d212a 15%,#feffff 50%,#1d212a 85%);
-            }
             .logo-link {
                 display: block;
                 height: 100%;
